# bridgy_followers

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  bridgy_followers.example.toml  rust-toolchain.toml
.github/workflows/: ci.yaml
crates/bridgy_followers/: Cargo.toml
crates/bridgy_followers/src/: bsky.rs  cli_args.rs  commands.rs  config.rs  credentials.rs  follower_status.rs  main.rs  mastodon.rs  tracing.rs  utils.rs  webfinger.rs
crates/bridgy_followers/src/bluesky/: mod.rs  tui.rs  utils.rs
crates/bridgy_followers/src/mastodon/: mod.rs  tui.rs  utils.rs
src/: config.rs  main.rs  mastodon.rs
