[workspace]
members = ["crates/bridgy_followers", "vendor/megalodon-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
atrium-api = "0.25"
atrium-common = "0.1"
atrium-xrpc-client = "0.5"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
megalodon = { path = "vendor/megalodon-rs" }
dialoguer = "0.11"
dirs = "5.0"
csv = "1.3"
