[workspace]
members = ["crates/bridgy_followers"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
atrium-api = "0.25"
atrium-common = "0.1"
atrium-xrpc-client = "0.5"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
csv = "1.3"
dialoguer = "0.11"
directories = "5.0"
dirs = "5.0"
ipld-core = "0.4"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
megalodon = "1.1.1"
reqwest = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
megalodon = { path = "vendor/megalodon-rs" }
