[package]
name = "bridgy_followers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bridgy_followers"
path = "src/main.rs"

[dependencies]
atrium-api.workspace = true
atrium-common.workspace = true
atrium-xrpc-client.workspace = true
clap.workspace = true
color-eyre.workspace = true
csv.workspace = true
dialoguer.workspace = true
directories.workspace = true
dirs.workspace = true
ipld-core.workspace = true
keyring.workspace = true
megalodon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
